--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,12 @@
     "version": 2,
     "builds": [
       {
-        "src": "app.js",
-        "use": "@now/node"
+          "src": "package.json",
+          "use": "vercel-sapper"
+      },
+      {
+          "src": "index.js",
+          "use": "@vercel/node"
       }
     ],
     "routes": [
