--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,8 @@
     "version": 2,
     "builds": [
       {
-          "src": "package.json",
-          "use": "vercel-sapper"
-      },
-      {
-          "src": "index.js",
-          "use": "@vercel/node"
+        "src": "app.js",
+        "use": "@vercel/node"
       }
     ],
     "routes": [
